--- a/CSS_Code/InidvidualBlogs.css
+++ b/CSS_Code/InidvidualBlogs.css
@@ -84,3 +84,32 @@ li{
     background-color: darkgreen;
     color: gold;
     };
+/* Media queries for responsiveness */
+@media only screen and (max-width: 479px) {
+  header {
+      display: contents;
+      flex-wrap: nowrap;
+      width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  nav {
+      display: flex;
+      flex-direction: column; /* Vertical format */
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+  }
+  nav.open {
+      display: flex;
+      flex-direction: column; /* Ensure vertical format when open */
+  }
+  table {
+      width: 100%;
+  }
+  td {
+      display: block; /* Ensure table cells are displayed as block elements */
+      text-align: center;
+      padding: 10px 0;
+  }
+}
